# rapid-config-reader

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
rapid_config_reader/: __init__.py  core.py
tests/: test_rapid_config_reader.py
